style.css
/* ... */
@media all and (max-width: 320px) {

  .animated.bounceInLeft {
    font-size: 11px !important;
  }

  .aboutme > p {
    padding: 0 20px;
  }

  #arrow {
    display: block;
    width: 90px;
    height: 70px;
    margin-left: auto;
    margin-right: auto;
  }

  .content-container > h1 {
    text-shadow: none;
  }

  .content-container > h1 {
    font-size: 50px;
  }

  .content-container > p {
    padding: 15px 30px 20px 30px;
    font-size: 19px;
  }

  .hidden-image {
    display: flex;
  }

  .hidden-links {
    display: none;
  }

  .image-container > img {
    width: 102%;
    height: 75%;
    z-index: 1;
    -webkit-filter: blur(5px);
    -moz-filter: blur(5px);
    -o-filter: blur(5px);
    -ms-filter: blur(5px);
    filter: blur(5px);
  }

  .land > h3 {
    font-size: 9px;
  }

  .mobile-links {
    display: flex;
    align-items: center;
    justify-content: space-around;
  }

  .mobile-links > a {
    font-size: 25px;
    border: 1px solid gray;
    margin: 10px;
    padding: 2px 20px 4px 20px;
    text-decoration: none;
    color: gray;
    letter-spacing: 2px;
    text-align: center;
  }

  .mobile-links > a:hover {
    background-color: rgb(225, 229, 237);
    color: white;
  }

  .overlay {
    display: none;
  }

  .project-info {
    flex-direction: column;
    height: 700px;
    padding: 60px 0;
  }

  #project3-info {
    height: 500px;
  }

  .project-img {
    height: 30%;
    width: 70%;
    margin: 15px;
  }

  #project3-info > .project-img {
    height: 50%;
    width: 65%;
    margin: 15px;
  }

  #project3 > .content-container > p {
    padding: 15px 30px 20px 30px;
    font-size: 19px;
  }

  #project2-info {
    flex-direction: column-reverse;
  }

  .skills > img {
    display: relative;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 50px;
    margin-top: 10px;
    padding: 5px;
  }

  .technology {
    margin-bottom: 30px;
  }

  .thomas {
    margin: auto;
    position: absolute;
    top: 70px; left: 0; bottom: 200px; right: 350;
    width: 100%;
    display: flex;
    height: auto;
    color: #FAFAFA;
    text-transform: uppercase;
    text-align: center;
    font-size: 3.3em;
    font-family: 'Rock Salt', cursive;
    font-weight: 800;
    letter-spacing: -0.02em;
    line-height: 1.2em;
    background-size: contain;
  }
}

